# POC-MCP-VIEWER

./: .gitignore  CHANGES.md  README.md  start-backend.bat  start-frontend.bat
backend/: .gitignore  agent_service.py  main.py  pyproject.toml  service.py  test_agent.py  test_load_data.py
backend/models/: domain.py  map_commands.py
backend/proto/: convert_gpkg_to_json.py  explore_gpkg.py  fix_symlinks.py  generate_mock_features.py  recreate_symlinks.py  reorganize_structure.py
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: ImageViewer.svelte
frontend/src/routes/: +page.svelte
frontend/static/krpano/: krpano.js
